added api get all players sorted by tournamentlevel won